--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "Vampetase",
+  "name": "Cirao",
   "version": "1.0",
   "manifest_version": 2,
-  "description": "Chrome extension to override all images in a page by Vampeta.",
-  "homepage_url": "https://github.com/famoraes/vampetase",
-  "author": "Fabiano Moraes",
-  "short_name": "Vampetase",
+  "description": "Chrome extension to change all the images for Ciro Gomes.",
+  "homepage_url": "https://github.com/brunopadz/cirao",
+  "author": "Bruno Padilha",
+  "short_name": "Cirao",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
@@ -31,7 +31,7 @@
       ],
       "js": [
         "js/jquery/jquery.min.js",
-        "src/inject/vampetase.js"
+        "src/inject/cirao.js"
       ]
     }
   ]
